--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <script src="build/pwa.js"></script>
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#12bb00" />
   </head>
   <body>
     <div id="root"></div>
